fix video comment section content overflow

--- a/home.css
+++ b/home.css
@@ -356,7 +356,7 @@ input {
   display: flex;
   flex-direction: row;
   margin-bottom: 16px;
-  max-width: 1280px;
+  max-width: 1184px;
 }
 .comment-main {
   display: flex;
